# guardpost

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-blocklist.yml
guardpost/: __init__.py  cli.py  client.py  engine.py  metrics.py
guardpost/ai/: __init__.py  scorer.py
guardpost/api/: __init__.py  dashboard.html  server.py
guardpost/discovery/: __init__.py
guardpost/email/: __init__.py  banned.py  enrichment.py  smtp.py  validator.py
guardpost/fraud/: __init__.py  patterns.py
guardpost/ip/: __init__.py  proxy.py  reputation.py
guardpost/storage/: __init__.py  base.py  memory.py  mongo.py  postgres.py  redis.py  sqlite.py
tests/: test_ai_scorer.py  test_banned_email.py  test_client.py  test_email_validator.py  test_engine.py  test_ip_reputation.py  test_patterns.py  test_proxy.py  test_smtp.py  test_storage_redis.py  test_storage_sqlite.py
