[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "guardpost"
dynamic = ["version"]
description = "Self-hosted registration abuse detection. Email validation + IP reputation + behavioral fraud analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Superposition Labs" },
]
keywords = [
    "email-validation",
    "disposable-email",
    "abuse-detection",
    "registration-fraud",
    "ip-reputation",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "dnspython>=2.6,<3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]
mongo = [
    "motor>=3.5,<4.0",
]
postgres = [
    "asyncpg>=0.29,<1.0",
]
redis = [
    "redis[hiredis]>=5.2,<7.0",
]
ai = [
    "httpx>=0.27,<1.0",
]
proxy = [
    "httpx>=0.27,<1.0",
    "geoip2>=4.8,<5.0",
]
client = [
    "httpx>=0.27,<1.0",
]
enrichment = [
    "httpx>=0.27,<1.0",
]
all = [
    "guardpost[api,ai,proxy,client,enrichment]",
]
dev = [
    "guardpost[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
guardpost = "guardpost.cli:main"

[project.urls]
Homepage = "https://github.com/superpositionlabs/guardpost"
Documentation = "https://github.com/superpositionlabs/guardpost#readme"
Repository = "https://github.com/superpositionlabs/guardpost"
Issues = "https://github.com/superpositionlabs/guardpost/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "guardpost/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["guardpost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
